# ipa-metadata

./: .gitignore  Cargo.toml  OPTIMIZATIONS.md  QUICKSTART.md  README.md  build-optimized.sh
.cargo/: config.toml
src/: error.rs  icon_extractor.rs  lib.rs  main.rs  plist_parser.rs  png_normalizer.rs
